<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="User Options">
    <EditTextPreference
        app:key="email"
        app:title="Email"
        app:summary="@string/email"
        app:defaultValue="@string/email"
        app:useSimpleSummaryProvider="true"
        />
    <EditTextPreference
        app:key="name"
        app:title="@string/Username"
        app:summary="@string/Username"
        app:defaultValue="@string/Username"
        app:useSimpleSummaryProvider="true"
        />
    <EditTextPreference
        app:key="password"
        app:title="@string/Password"
        app:defaultValue="@string/Password"
        />
    </PreferenceCategory>
    <PreferenceCategory android:title="Preference Options">
    <SwitchPreferenceCompat
        app:key="toggle_notifications"
        app:summary="Enable Notifications"
        app:title="@string/preference_notifications" />
    <SwitchPreferenceCompat
        app:key="dark_theme"
        app:summary="TODO: Implement switching themes"
        app:title="@string/Theme" />
    </PreferenceCategory>
    <!--        app:summaryOff="@string/Switch_to_dark_theme"-->
    <!--        app:summaryOn="@string/Switch_to_light_theme"-->

    <PreferenceCategory>
        <Preference
            app:title="Sign Out"
            app:key="sign_out"
            />

        <Preference
            app:title="Delete Account"
            app:key="delete_account"
            />

    </PreferenceCategory>
</PreferenceScreen>
