<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_dashboard"
    android:id="@+id/mobile_navigation_teacher">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.studygo.activities.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.studygo.activities.ui.messages.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.studygo.activities.ui.settings.PreferenceFragment"
        android:label="@string/Settings" />

    <activity
        android:id="@+id/navigation_messages_activity"
        android:name="com.example.studygo.activities.ActivityMessages"
        android:label="@string/title_messages"
        tools:layout="@layout/activity_messages" />



</navigation>